--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -56,28 +56,22 @@
       </div>
     </nav>
 
-    <div class="container">
-        {% block content %}{% endblock %}
+    
+   <div  class="content">
+              <div class="inner-content">
+                      {% block content %}{% endblock %}
+              </div>
+       </div>
 
-
-    </div><!-- /.container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ url_for('static',filename='js/bootstrap.min.js') }}"></script>
 
   </body>
 
 
 <!-- Footer -->
 <footer class="page-footer font-small pt-4 ">
-
-    <!-- Footer Elements -->
-    <div class="container">
-
-      <!-- Call to action -->
+<div class="container">
+  <div class="row">
+    <div class="col-sm-10">
       <ul class="list-unstyled list-inline py-2">
         <li class="list-inline-item">
          <a href="http://webenlance.com" class="custom">Terms of use</a>
@@ -88,46 +82,60 @@
         <li><a href="http://webenlance.com" class="custom">Cookies</a></li>
         <li><a href="http://webenlance.com" class="custom">Privacy</a></li>
       </ul>
-      <!-- Call to action -->
-
-    </div>
+     </div>
+    
     <!-- Footer Elements -->
 
-    <!-- Copyright -->
    <section id="lab_social_icon_footer">
-     <div class="container">
+  <div class="row">
+    <div class="col-2">
         <div class="icon">
                 <a href="https://www.facebook.com/bootsnipp"><i id="social-fb" class="fa fa-facebook-square fa-3x social custom"></i></a>
               <a href="https://twitter.com/bootsnipp"><i id="social-tw" class="fa fa-twitter-square fa-3x social custom"></i></a>
               <a href="https://plus.google.com/+Bootsnipp-page"><i id="social-gp" class="fa fa-google-plus-square fa-3x social custom"></i></a>
               <a href="mailto:#"><i id="social-em" class="fa fa-envelope-square fa-3x social custom"></i></a>
-    </div>
+    </div></div>
 </div>
 </section>
-    <!-- Copyright -->
-
+   </row>
+</div>
   </footer>
   <!-- Footer -->
 
-   <style>
-   footer{
-    width: 100%;
-    height:100px;   
-    position:absolute;
-    bottom:0px;
-    left:0px;
-    background: #e0e0e0;
-
-}
-
-.custom {
-    color: black;
-}
-.icon {
-  position: fixed;
-  right: 50px;
-  
-}
-</style>
  
+ 
+ <style type="text/css">
+          html,body{
+            height:100%;
+          }
+         .content{
+            min-height: 100%;
+         }
+
+         .inner-content{
+            padding: 0px;
+            padding-bottom: 0px;
+         }
+          footer{
+          width: 100%;
+          height:50px;   
+          position: relative; 
+          bottom:0px;
+          left:0px;
+          background: #e0e0e0;
+          
+          }
+         .custom {
+         color: black;
+         }
+        .icon {
+         position: relative; 
+          }
+</style>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="{{ url_for('static',filename='js/bootstrap.min.js') }}"></script>
 </html>
