--- a/website/templates/course.html
+++ b/website/templates/course.html
@@ -13,95 +13,90 @@
             <img class="sd_navigation_item" src="/static/images/next1.png" disabled/>
             <a href="/institution/{{course.UKPRN}}" class="sd_navigation_item" style="color:#333333"><u>University profile</u></a>
             <img class="sd_navigation_item" src="/static/images/next1.png" disabled/>
-            <label class="sd_navigation_item">Program profile</label>
+            <label class="sd_navigation_item">Programme profile</label>
           </div>
       </div>
 
       <div class="starter-template">
         <h1 id="uni_name" style="text-align: center"> {{university_name}} </h1>
         <h1>{{course.TITLE}}</h1>
-        </p>
       </div>
 
+      <div class="panel panel-default sd-panel">
+        <div class="panel-heading">
+            <h3 class="panel-title">
+                Programme description
+            </h3>
+        </div>
+        <div class="panel-body" id="pro_dscri">
+            <p class="lead">
+              This fundamental course for all writing students introduces students 
+              to the conventions of academic writing. It emphasizes defining and developing 
+              a significant topic and using principles of clear thinking to support 
+              an assertive or argumentative thesis. Students will gain an understanding 
+              of their subject matter, audience, purpose, and point-of-view, 
+              and demonstrate that understanding through the organization and development 
+              of their essays. Students will learn how to analyze and evaluate other writers' work 
+              to sharpen their critical abilities as readers and writers.
+            </p>
+        </div>
+      </div>
+      <div class="panel panel-default sd-panel">
+        <div class="panel-heading">
+            <h3 class="panel-title">
+                Programme link
+            </h3>
+        </div>
+        <div class="panel-body" id="pro_dscri">
+            <a href="{{course.LTURL}}">{{course.LTURL}}</a>
+        </div>
+      </div>
+      <div class="panel panel-default sd-panel">
+        <div class="panel-heading">
+            <h3 class="panel-title">
+                Useful information
+            </h3>
+        </div>
+        <div class="panel-body" id="pro_dscri">        
+          <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th scope="col" style="width:25%">Programme start date</th>
+                  <th scope="col" style="width:25%">Application deadline</th>
+                  <th scope="col" style="width:25%">Study mode</th>
+                  <th scope="col" style="width:25%">Duration</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td id="infor_sta_date">{{date}}</td>
+                  <td id="infor_deadline">{{deadline}}</td>
+                  <td id="infor_mode">{{modes}}</td>
+                  <td id="infor_duration">{{duration}}</td>
+                </tr>
+              </tbody>
+          </table>
 
-      <div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">
-            Programme description
-        </h3>
-    </div>
-    <div class="panel-body" id="pro_dscri">
-        <p class="lead">
-          This fundamental course for all writing students introduces students 
-          to the conventions of academic writing. It emphasizes defining and developing 
-          a significant topic and using principles of clear thinking to support 
-          an assertive or argumentative thesis. Students will gain an understanding 
-          of their subject matter, audience, purpose, and point-of-view, 
-          and demonstrate that understanding through the organization and development 
-          of their essays. Students will learn how to analyze and evaluate other writers' work 
-          to sharpen their critical abilities as readers and writers.
-        </p>
-    </div>
-   </div>
-
-
-      <div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">
-            Programme link
-        </h3>
-    </div>
-    <div class="panel-body" id="pro_dscri">
-        <a href="{{course.LTURL}}">{{course.LTURL}}</a>
-    </div>
-   </div>
-
-  <div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">
-            Useful information
-        </h3>
-    </div>
-    <div class="panel-body" id="pro_dscri">        
-      <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th scope="col" style="width:25%">Programme start date</th>
-              <th scope="col" style="width:25%">Application deadline</th>
-              <th scope="col" style="width:25%">Study mode</th>
-              <th scope="col" style="width:25%">Duration</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td id="infor_sta_date">{{date}}</td>
-              <td id="infor_deadline">{{deadline}}</td>
-              <td id="infor_mode">{{modes}}</td>
-              <td id="infor_duration">{{duration}}</td>
-            </tr>
-          </tbody>
-      </table>
-
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th scope="col" style="width:25%">Garduation rates</th>
-            <th scope="col" style="width:25%">Employment chance</th>
-            <th scope="col" style="width:25%">Salary</th>
-            <th scope="col" style="width:25%">Teaching excellence</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td id="infor_sta_date">100%</td>
-            <td id="infor_deadline">100%</td>
-            <td id="infor_mode">10000$</td>
-            <td id="infor_duration">100%</td>
-          </tr>
-        </tbody>
-    </table>
-    </div>
-   </div>
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th scope="col" style="width:25%">Garduation rates</th>
+                <th scope="col" style="width:25%">Employment chance</th>
+                <th scope="col" style="width:25%">Salary</th>
+                <th scope="col" style="width:25%">Teaching excellence</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td id="infor_sta_date">100%</td>
+                <td id="infor_deadline">100%</td>
+                <td id="infor_mode">10000$</td>
+                <td id="infor_duration">100%</td>
+              </tr>
+            </tbody>
+        </table>
+        </div>
+      </div>
 
 
 
